tests/negative/semantic/array_push_float_into_int/input.ci
void main() {
    int[] xs = [1];
    arrayPush(xs, 1.5);
}
